<?xml version="1.0"?>
<package format="2">
  <name>rqt_virtual_joy</name>
  <version>0.1.2</version>
  <description>The rqt_virtual_joy package</description>

  <maintainer email="hikaru.sugiura@whill.inc">Hikaru Sugiura</maintainer>

  <license>MIT</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rqt_virtual_joy</url> -->


  <author email="hikaru.sugiura@whill.inc">Hikaru Sugiura</author>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
